--- a/Presentation/Views/Window4.xaml
+++ b/Presentation/Views/Window4.xaml
@@ -3,9 +3,13 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:converter="clr-namespace:Utils.others;assembly=Utils"
         xmlns:local="clr-namespace:Presentation.Views"
         mc:Ignorable="d"
         Title="Window4" Height="450" Width="800">
+    <Window.Resources>
+        <converter:ImageConverter x:Key="ImagePathConverter" />
+    </Window.Resources>
     <Grid>
         <Grid>
             <Label Content="FirstName" HorizontalAlignment="Left" Margin="30,107,0,0" VerticalAlignment="Top" Height="44" Width="108"/>
@@ -25,11 +29,13 @@
             <TextBox Text="{Binding nesne2.LastName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" Margin="160,178,334,217"/>
             <TextBox Text="{Binding nesne2.Gender, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" Margin="160,242,334,153"/>
             <TextBox Text="{Binding nesne2.Adress, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" Margin="160,312,334,83"/>
-            <Button Content="Güncelle" Command="{Binding Guncelgonder}" CommandParameter="{Binding nesne2}" HorizontalAlignment="Left" Margin="580,151,0,0" VerticalAlignment="Top" Height="66" Width="112"/>
+            <Button Content="Güncelle" Command="{Binding Guncelgonder}" CommandParameter="{Binding nesne2}" HorizontalAlignment="Left" Margin="580,326,0,0" VerticalAlignment="Top" Height="66" Width="112"/>
             <Label Content="Id" HorizontalAlignment="Left" Margin="30,41,0,0" VerticalAlignment="Top" Height="44" Width="108"/>
             <TextBox Text="{Binding nesne2.Id, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" Margin="160,41,334,354"/>
-            <Label Content="Resim" HorizontalAlignment="Left" Margin="30,369,0,0" VerticalAlignment="Top"/>
-            <TextBox HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="{Binding DataContex.ImageName, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Window},Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="298" Margin="160,369,0,0"/>
+            <Button Content="Resim" Command="{Binding OnOpenDialog}" HorizontalAlignment="Left" Margin="30,369,0,0" VerticalAlignment="Top" Width="46"/>
+            <TextBox HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" IsReadOnly="True" Text="{Binding ImageName,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="298" Margin="160,369,0,0"/>
+            <Image Source="{Binding nesne2.Image, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource ImagePathConverter}}"
+                   HorizontalAlignment="Left" Height="183" VerticalAlignment="Top" Width="198" Margin="532,83,0,0"/>
 
 
         </Grid>
